<resources>
    <string name="app_name">ElektroGo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="generar_ruta">Generar ruta</string>
    <string name="places_autocomplete_search_hint">Cerca localització</string>
    <string name="origen">Origen:</string>
    <string name="dest">Destí:</string>
    <string name="autonomia_actual">Autonomia actual:</string>
    <string name="km">km</string>
    <string name="autonomia">Autonomia:</string>
    <string name="errorOnFields">Ompli tots els camps correctament per tal de poder generar una ruta</string>
    <string name="errorOnLocation">Hi ha hagut un error amb la localització, si us plau torni a intentar-ho</string>
    <string name="fieldRequired">Aquest camp és obligatori</string>
    <string name="errorOnRoute">Hi ha hagut un error, no hi ha cap ruta disponible</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Mapa">Mapa</string>
    <string name="title_pooling">Pooling</string>
    <string name="title_profile">Perfil</string>
    <string name="title_route">Ruta</string>
    <string name="title_map">Mapa</string>
    <string name="LicensePlateLabel">Introdueix matricula</string>
    <string name="LicensePlateExample">1234ABC</string>
    <string name="CarBrandLabel">Introdueix la marca del vehícle</string>
    <string name="CarBrandHint">Tesla</string>
    <string name="VehicleModelLabel">Introdueix model del vehicle</string>
    <string name="VehicleModelExample">X</string>
    <string name="DrivingRangeLabel">Introdueix la autonomia del vehicle (km)</string>
    <string name="DrivingRangeExample">100</string>
    <string name="FabricationYearLabel">Any de fabricació</string>
    <string name="FabricationYearInput">2020</string>
    <string name="SaveVehicle">Afegir</string>
    <string name="AddVehicle">Afegir vehicle</string>
    <string name="MyVehicles">Els meus vehicles</string>
    <string name="BecomeDriver">Registrar carnet de conduir</string>
    <string name="Achievements">Trofeus</string>
    <string name="PersonalInformation">Informació Personal</string>
    <string name="Username">Nom Usuari</string>
    <string name="CompleteName">Nom</string>
    <string name="email">Email</string>
    <string name="Login">Login amb</string>
    <string name="ObligatoryField">Aquest camp és obligatori</string>
    <string name="notEnoughCharactersLicensePlate">Has de introduir 7 o 8 caracters</string>
    <string name="invalidLicensePlate">El format de matrícula no és vàlid</string>
    <string name="VehicleImageButton">Inserir imatge del vehicle</string>
    <string name="ObligatoryFieldImage">Has de afegir una imatge del vehicle</string>
    <string name="VehicleCreatedSuccessfully">El vehicle ha estat guardat</string>
    <string name="VehicleNotCreated">Un o més camps són incorrectes</string>
    <string name="AskLocation"> Accedeix a la configuració del teu dispositiu i accepta els permisos</string>
    <string name="WhenLocationDenied">Per activar la localització, ves a la configuració del dispositiu i accepta els permisos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seatsVehicleLabel">Introdueix els seients del vehícle</string>
    <string name="seatsVehicleExample">5</string>
    <string name="VehicleSeats">Seients</string>
    <string name="DriverVehicleAlreadyExists">Ja has creat aquest vehícle</string>
    <string name="VehicleAlreadyExists">Aquest vehícle ja existeix</string>
    <string name="WrongVehicleInfo">Ja existeix un vehícle amb la mateixa matricula però amb informació diferent</string>
    <string name="ServerError">Hi ha hagut un error amb el servidor. Intenta-ho de nou més tard.</string>
    <string name="btnValorar">Valora</string>
    <string name="valorar_usuari">Valorar Usuari</string>
    <string name="dateLabel">Data</string>
    <string name="HourButton">Hora</string>
    <string name="HourExample">12:00</string>
    <string name="PublishButton">Publicar</string>
    <string name="ExampleDate">23/6/2022</string>
    <string name="TrajectDetailsLabel">Detalls del trajecte:</string>
    <string name="ExampleDetailsTraject">Anirem per la AP-7. No acostumo a conduir molt ràpid, etc.</string>
    <string name="VehicleLabel">Vehícle:</string>
    <string name="RestTextExample">·No es poden portar gossos\n·No es pot fumar en el vehícle\n·Etc.</string>
    <string name="SeatsOffered">Seients disponibles:</string>
    <string name="RestTrip">Restriccions del trajecte:</string>
    <string name="DataIncorrecte">La data del trajecte és incorrecte</string>
    <string name="HoraIncorrecte">La hora del trajecte és incorrecte</string>
    <string name="savedCarpooling">El trajecte ha estat publicat</string>
    <string name="errorCarpooling">Hi ha hagut un error amb el servidor. Torna-ho a intentar</string>
    <string name="hora_d_inici">hora d\'inici</string>
    <string name="dataFiltrar">Data</string>
    <string name="buscarFiltrar">Buscar</string>
    <string name="errorFieldsFiltrar">Ompli els camps de forma correcta per tal de poder cercar trajectes</string>
    <string name="enunciatDenuncia">Indica a continuació el motiu de la denúncia:</string>
    <string name="hintDenuncia">El motiu de la denuncia és...</string>
    <string name="bttDenuncia">Fer Denúncia</string>
    <string name="firstLoginWelcome">Benvingut/da,</string>
    <string name="firstLoginTo">a</string>
    <string name="firstLoginSelectUsername">Siusplau, selecciona el teu nom d\'usuari</string>
    <string name="firstLoginWarning">Atenció: </string>
    <string name="firstLoginWarning2">tothom el prodrà veure</string>
    <string name="firstLoginUsername">nom d\'usuari</string>
    <string name="firstLoginSave">Guardar</string>
    <string name="facebook_app_id">850446215915012</string>
    <string name="fb_login_protocol_scheme">fb850446215915012</string>
    <string name="facebook_client_token">d2fe733d766ef258b456bfcbbdb78de2</string>
    <string name="profile_logout_button">Tancar Sessió</string>
    <string name="profile_my_trips">Els meus trajectes</string>
    <string name="shareOwnTrip">He creat un nou trajecte a ElektroGo per al dia %1$s a les %2$s amb origen %3$s i destinació %4$s. Només queden %5$s seients lliures! \n\nUneix-te a mi a través de l\'aplicació: https://marccastellsdostal.wixsite.com/elektrogo</string>
    <string name="shareTrip">He trobat aquest trajecte a l\'app d\'ElektroGo per al dia %1$s a les %2$s amb origen %3$s i destinació %4$s. Només queden %5$s seients lliures! \n\nUneix-te  a través de l\'aplicació: https://marccastellsdostal.wixsite.com/elektrogo</string>
    <string name="share">Compartir a</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="resetFilters">Reset</string>
    <string name="textProva">Això és un text de prova</string>
    <string name="catalaMenu">Català</string>
    <string name="castellaMenu">Castellà</string>
    <string name="anglesMenu">Anglès</string>
    <string name="navigation_drawer_open">Obrir</string>
    <string name="navigation_drawer_close">Tancar</string>
    <string name="detailsLabel">Detalls del trajecte</string>
    <string name="llistaVehicles">Llista de vehicles</string>
    <string name="select_Language">Seleccioni l\'idioma:</string>
    <string name="catala">Català</string>
    <string name="english">English</string>
    <string name="espanol">Español</string>
    <string name="preferences">Preferències</string>
    <string name="correu_electronic">Correu electrònic:</string>
    <string name="eliminar_compte">Eliminar Compte</string>
    <string name="month">Mes</string>
    <string name="Jan">Gener</string>
    <string name="Feb">Febrer</string>
    <string name="Mar">Març</string>
    <string name="Apr">Abril</string>
    <string name="May">Maig</string>
    <string name="Jun">Juny</string>
    <string name="Jul">Juliol</string>
    <string name="Aug">Agost</string>
    <string name="Sept">Setembre</string>
    <string name="Oct">Octubre</string>
    <string name="Nov">Novembre</string>
    <string name="Dec">Decembre</string>
    <string name="channel_name">Chat</string>
    <string name="channel_description" translatable="false">Notifications coming from messages received on the chat</string>
    <string name="ToolbarMapa">Mapa</string>
    <string name="ToolbarRuta">Ruta</string>
    <string name="ToolbarChat">Chat</string>
    <string name="ToolbarPerfil">Perfil</string>
    <string name="CrearTrajecte">Crear Trajecte</string>
    <string name="MyTrips">Els meus trajectes</string>
    <string name="DataFilter">Data</string>
    <string name="FinsFilter">Fins a</string>
    <string name="DesdeFilter">Des de</string>
    <string name="OrigenString">Origen</string>
    <string name="DestiString">Desti</string>
    <string name="details">Detalls:</string>
    <string name="restriccions">Restriccions:</string>
    <string name="encara_hi_ha">Encara hi ha</string>
    <string name="seients_disponibles">seients disponibles</string>
    <string name="anfitrio">Anfitrió:</string>
    <string name="buttonCancelTrip">Cancel·lar trajecte</string>
    <string name="rao_de_cancel_lacio">Motiu</string>
    <string name="eliminaValoracio">Elimina</string>
    <string name="comentariValoracio">Escriu un comentari</string>
    <string name="cancel">cancelar</string>
    <string name="ok">D\'acord</string>
    <string name="pregunta_difusio">Escull a qui vols enviar el missatge</string>
    <string name="next">next</string>
    <string name="message_to_send">Type the message you want to send</string>
    <string name="message_sent">messages sent</string>
    <string name="esborrarXat">Vols esborrar aquest xat?</string>
    <string name="si">SI</string>
    <string name="esborrantXat">Esborrant xat</string>
    <string name="no">NO</string>
    <string name="envia">enviar</string>
    <string name="buscaUsuari">Buscar a...</string>
    <string name="confirma">confirmar</string>
    <string name="errorChatNotFound">Error, chat conversation not found</string>
    <string name="TripsNavMenu">My trips</string>
    <string name="vehiclesMenu">My vehicles</string>
    <string name="perfil">Perfil</string>
    <string name="ajustos">Ajustos</string>
    <string name="nom_d_usuari">Nom d\'usuari:</string>
    <string name="verificant">Els administradors estan verificant la teva sol·licitud</string>
    <string name="insertDNImage">Insereix una imatge de la part frontal del carnet de conduir</string>
    <string name="insert2DNImage">Insereix una imatge de la part reversa del carnet de conduir</string>
    <string name="sendButton">Enviar</string>
    <string name="block">Bloquejar</string>
    <string name="buttonJoinTrip">Join the trip!</string>
    <string name="deleteAccount" >Delete account</string>
    <string name="blocked" >You have been blocked by this user</string>
    <string name="youBlocked">You have blocked this account</string>
    <string name="abandonTrip">Abandonar trajecte</string>
    <string name="errorAbandonTrip">Hi ha hagut un error abandonant el trajecte</string>
    <string name="report">Denunciar</string>
    <string name="confirmation">Confirmació</string>
    <string name="MotiuCancelacio">Dona un motiu i confirma</string>
    <string name="ConfirmarButton">CONFIRMAR</string>
    <string name="trajecteCancelat">Trajecte cancel·lat</string>
    <string name="ErrorCancelarTrajecte">No s\'ha pogut canel·lar el trajecte.</string>
    <string name="GetStationsServerTimeout">No s\'ha pogut connectar amb el servidor.</string>
    <string name="valorarMenu">Valorar</string>
    <string name="denunciarMenu">Denunciar</string>
    <string name="bloquejarMenu">Bloquejar</string>
</resources>