<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item android:title= "Car-pooling" >
            <menu>
            <item
                android:id="@+id/nav_item_two"
                android:icon="@drawable/calendar_month"
                android:title="@string/TripsNavMenu" />

            <item
                android:id="@+id/nav_item_three"
                android:icon="@drawable/car_rental"
                android:title="@string/vehiclesMenu" />
            </menu>
        </item>

        <item
            android:title="Account">
            <menu>
                <item
                    android:id="@+id/nav_item_one"
                    android:icon="@drawable/person"
                    android:title="@string/perfil" />
                <item
                    android:id="@+id/nav_item_four"
                    android:icon="@drawable/logout_petit"
                    android:title= "@string/profile_logout_button" />
                <item
                    android:id="@+id/nav_item_seven"
                    android:icon="@drawable/ic_delete_24"
                    android:title="Delete Account"
                    android:iconTint="@color/white"/>
            </menu>
        </item>

        <item
            android:id="@+id/nav_item_six"
            android:icon="@drawable/ic_language_24"
            android:title="Change Language">
            <menu android:checkableBehavior="all">

                 <item
                     android:id="@+id/nav_subitem_one"
                     android:icon="@drawable/ic_language_24"
                     android:title="@string/catalaMenu" />
                 <item
                     android:id="@+id/nav_subitem_two"
                     android:icon="@drawable/ic_language_24"
                     android:title="@string/castellaMenu" />
                 <item
                     android:id="@+id/nav_subitem_three"
                     android:icon="@drawable/ic_language_24"
                     android:title="@string/anglesMenu" />
            </menu>
        </item>



    </group>
</menu>