<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preferences.PreferencesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/languageLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_Language"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radiobuttongroup"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/englishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/catalanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/catala" />

            <RadioButton
                android:id="@+id/spanishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/espanol" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>